# tdd-learning

./: pyproject.toml
.github/workflows/: example.yml
src/tdd_learning/: __init__.py  models.py
tests/: test_batches.py  test_models.py
