[project]
name = "tdd-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Denis Eliseev", email = "d.a.eliseev@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pytest>=8.3.5",
]

[project.scripts]
tdd-learning = "tdd_learning:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
